# Chess

./: .gitignore  CMakeLists.txt
include/: Board.h  constants.h
src/: main.cpp
